migration:add field hub category id and active
